<resources>
    <string name="app_name">MyMuseum</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="e_mail2">E-mail:</string>
    <string name="password2">Password:</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="registar">Registar</string>
    <string name="sair">Sair</string>
    <string name="visitar">Visitar</string>
    <string name="voltar">Voltar</string>
    <string name="localizacao">Localização</string>
    <string name="voltar_aos_museus">Voltar aos museus</string>
    <string name="horario">Horário</string>
    <string name="website">Website</string>
    <string name="informacao">Informação</string>
    <string name="partilhar">Partilhar</string>
    <string name="desja_visitar_este_museu">Desja visitar este museu?</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="sobre_a_aplica_o">Sobre a aplicação</string>
    <string name="sobre_os_museus">Sobre os museus</string>
    <string name="aplicacao">Aplicação</string>
    <string name="museus">Museus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informacoes">Informações</string>
    <string name="versao_minima">Versão Mínima</string>
    <string name="android_api_23">Android API 23</string>
    <string name="trabalho_realizado_por">Trabalho Realizado Por:</string>
    <string name="nuno_azevedo">Nuno Azevedo</string>
    <string name="n_21631">Nº 21631</string>
    <string name="horario_">Horário:</string>
    <string name="website_">Website:</string>
    <string name="descricao_">Descrição:</string>
</resources>