<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_museu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/titulo"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/horario_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horario_"
            style="@style/titulo"
            />

        <TextView
            android:id="@+id/horario_temp_museu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/informacao"/>

        <TextView
            android:id="@+id/website_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_"
            style="@style/titulo"
            />

        <TextView
            android:id="@+id/website_temp_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/informacao"/>

        <TextView
            android:id="@+id/descricao_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao_"
            style="@style/titulo"
            />

        <TextView
            android:id="@+id/descricao_temp_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/informacao"/>











    </LinearLayout>
</androidx.cardview.widget.CardView>





