<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/horario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/website">

        <TextView
            android:id="@+id/horario_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            style="@style/titulo"/>

        <TextView
            android:id="@+id/horario_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/informacao"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horario"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/website_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            style="@style/titulo"/>

        <TextView
            android:id="@+id/website_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/informacao"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website"
        >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:text="@string/voltar"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_corner_button"

            />



        <TextView
            android:id="@+id/positive_button"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:text="@string/visitar"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_corner_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>