<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogIn.ActivityLogIn">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/bem_vindo"
                    android:textColor="@color/gray"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toTopOf="@id/emailEdit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/emailEdit"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/login_height"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_corner_text"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/gray"
                    app:layout_constraintBottom_toTopOf="@id/passEdit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/passEdit"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/login_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_corner_text"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEdit"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="center"
                    android:text="@string/entrar"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/passEdit"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/passEdit"
                    app:layout_constraintTop_toBottomOf="@id/passEdit" />

                <Button
                    android:id="@+id/registar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="center"
                    android:text="@string/registar"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/login"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/passEdit"
                    app:layout_constraintTop_toTopOf="@id/passEdit"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>