<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item.ItemMainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/info_museu"
        app:layout_constraintBottom_toTopOf="@id/voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="336dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_museu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/mapabttn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_button"
            android:gravity="center"
            android:text="@string/localizacao"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/infobttn"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/informacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/partilharbttn"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/partilhar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/voltar_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar_aos_museus"
            android:background="@drawable/rounded_corner_button"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.drawerlayout.widget.DrawerLayout>

</layout>