<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desja_visitar_este_museu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/gray"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/imagem_museu_dialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/dialog_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/info_layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/imagem_museu_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nome_museu_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="19sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/descricao_museu_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_layout_dialog"
        >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:text="@string/voltar"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_corner_button"

            />



        <TextView
            android:id="@+id/positive_button"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:text="@string/visitar"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_corner_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>